--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
   "name": "twilio-media-server",
   "version": "1.0.0",
-  "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
-    "express": "^5.2.1",
-    "ws": "^8.19.0"
+    "express": "^4.19.2",
+    "ws": "^8.16.0"
   }
 }
